// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tks scenario tks scenario 1`] = `
{
  "content": "username1 username2 username3 username4 がパーティーを結成したぞ!
[計測中...0/5] (推定R2000) | (チーム名未設定)
メンバーは<#1043583020457807982> に移動してください 🚀",
}
`;

exports[`tks scenario tks scenario 2`] = `
"通知切ってますなう
username5: 対抗戦味方募集@3
description 1"
`;

exports[`tks scenario tks scenario 3`] = `
{
  "content": "username8 が参加しました。
対抗戦味方募集@うまり
[計測中...0/5] (推定R2000) | (チーム名未設定)
メンバーは<#1043583020457807982> に移動してください 🚀",
}
`;

exports[`tks scenario tks scenario 4`] = `
"username5 username6 username7 username8 がパーティーを結成したぞ!
[計測中...0/5] (推定R2000) | (チーム名未設定)"
`;

exports[`tks scenario tks scenario 5`] = `
"対抗戦相手募集
メンバー: username1 username2 username3 username4
ルール: ガチエリア 3本先取
3"
`;

exports[`tks scenario tks scenario 6`] = `
"対抗戦開始 🚀
アルファ: [チーム名: (未定)] username1 username2 username3 username4
ブラボー: [チーム名: (未定)] username5 username6 username7 username8

結果報告はアルファチームが行ってください 💪"
`;

exports[`tks scenario tks scenario 7`] = `
"アルファ: [チーム名: (未定)] username1 username2 username3 username4
ブラボー: [チーム名: (未定)] username5 username6 username7 username8

結果: アルファ 3 - 2 ブラボー 💡"
`;
